--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -39,6 +39,7 @@
             android:src="@mipmap/ic_launcher"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
+            android:visibility="gone"
             />
 
         <ImageView
