--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,12 +49,13 @@
         android:layout_width="match_parent"
         android:visibility="gone"
         />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_showImageMsg_home"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/inc_screen_home"
-        >
 
-    </android.support.v7.widget.RecyclerView>
+        <ListView
+            android:id="@+id/lv_showImageMsg_home"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/inc_screen_home">
+
+        </ListView>
+
 </RelativeLayout>
