--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -6,12 +6,83 @@
     android:orientation="vertical"
     tools:context=".ui.activity.DetailsActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        >
+    <ImageView
+        android:id="@+id/iv_faceImage_details"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:orientation="vertical"
+            >
+            <TextView
+                android:id="@+id/tv_msg1_details"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="时间:2018-11-21"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                />
+            <TextView
+                android:id="@+id/tv_msg2_details"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="总数:3"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                />
+            <TextView
+                android:id="@+id/tv_msg3_details"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="对比结果:通过"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                />
+            <TextView
+                android:id="@+id/tv_msg4_details"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="图像结果:通过"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                android:visibility="invisible"
+                />
+
+        </LinearLayout>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimary"/>
+    <RelativeLayout
+        android:id="@+id/rl_showDetailsMsg_details"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        >
+
+    </RelativeLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_showDetailsMsg_details"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
+        android:visibility="gone"
         >
 
     </android.support.v4.view.ViewPager>
