--- a/app/src/main/res/layout/recycler_history_verification_layout.xml
+++ b/app/src/main/res/layout/recycler_history_verification_layout.xml
@@ -17,49 +17,51 @@
         android:layout_weight="6"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
             <TextView
                 android:id="@+id/tv_hVerificationResult_listView"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="通过"
-                android:textSize="@dimen/text_size" />
-
-            <TextView
-                android:id="@+id/tv_hVerificationTime_listView"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:gravity="center_vertical"
-                android:text="2018-11-15"
-                android:textSize="@dimen/text_size" />
-        </LinearLayout>
+                android:textSize="@dimen/text_size"
+                android:singleLine="true"
+                android:paddingLeft="5dp"
+                />
 
         <TextView
-            android:id="@+id/tv_hVerificationImageID_listView"
+            android:id="@+id/tv_hVerificationTotal_listView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginLeft="2dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:text="1101081542181099923"
-            android:textSize="@dimen/text_size" />
+            android:text="3"
+            android:textSize="@dimen/text_size"
+            android:singleLine="true"
+            android:paddingLeft="5dp"/>
+            <TextView
+                android:id="@+id/tv_hVerificationTime_listView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:text="2018-11-15"
+                android:textSize="@dimen/text_size"
+                android:singleLine="true"
+                android:paddingLeft="5dp"
+                />
+
     </LinearLayout>
 
     <ImageView
         android:id="@+id/iv_toDetails_listView"
-        android:layout_width="30dp"
+        android:layout_width="40dp"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_marginRight="25dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/rightimage"
+        android:padding="15dp"
+        />
 
 </LinearLayout>
