--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -68,14 +68,14 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/colorPrimary"/>
-    <RelativeLayout
-        android:id="@+id/rl_showDetailsMsg_details"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_showDetailsMsg_details"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
         >
 
-    </RelativeLayout>
+    </android.support.v7.widget.RecyclerView>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_showDetailsMsg_details"
