--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -17,12 +17,14 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:padding="5dp"
         />
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:orientation="vertical"
+
             >
             <TextView
                 android:id="@+id/tv_msg1_details"
@@ -62,6 +64,24 @@
                 android:visibility="invisible"
                 />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="图像结果:通过"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                android:visibility="invisible"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:text="图像结果:通过"
+                android:gravity="center_vertical"
+                android:paddingLeft="5dp"
+                android:visibility="invisible"
+                />
         </LinearLayout>
     </LinearLayout>
     <View
