--- a/app/src/main/res/layout/recycler_history_verification_layout.xml
+++ b/app/src/main/res/layout/recycler_history_verification_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1.5"
-        android:paddingLeft="5dp"
+        android:padding="5dp"
         android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
@@ -17,7 +17,7 @@
         android:layout_height="match_parent"
         android:layout_weight="6"
         android:orientation="vertical"
-        android:layout_marginLeft="5dp"
+        android:layout_margin="5dp"
         >
 
         <TextView
